# xbmc-addon-movistartv

./: AUTHORS  README.md  configure.ac
addons/: Makefile.am
addons/pvr.movistartv/: Makefile.am
addons/pvr.movistartv/addon/: PVRMovistarAddonSettings.xml  addon.xml.in
addons/pvr.movistartv/project/VS2010Express/: pvrclient_movistartv.vcxproj  pvrclient_movistartv.vcxproj.filters
addons/pvr.movistartv/src/: MovistarTVDVBSTP.cpp  MovistarTVDVBSTP.h  MovistarTVRPC.cpp  MovistarTVRPC.h  PVRMovistarData.cpp  PVRMovistarData.h  client.cpp
lib/: Makefile.am
project/VS2010Express/: xbmc-pvr-movistartv.sln
project/VS2013CE/: .gitignore  xbmc-pvr-movistartv.sln
